config-root/namespaces/apps/nodey471/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  creationTimestamp: null
  name: nodey471
  namespace: myapps
spec:
  rules:
  - host: nodey471.34.76.100.223.nip.io
    http:
      paths:
      - backend:
          serviceName: nodey471
          servicePort: 80
status:
  loadBalancer: {}
